--- a/online-examination/.env
+++ b/online-examination/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:AcbhDcxrcEARpWGfbYlsKPiK58mLaRDRl9sBKY0BsBs=
+APP_KEY=base64:XhwwZ2n5ps0vpn26Ln07G7ekHInlnegO/A2oBiNuiJQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=database
 DB_USERNAME=root
 DB_PASSWORD=
 
