--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "fideloper/proxy": "^4.4",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "6.0",
         "laravel/framework": "^6.20",
+        "laravel/passport": "9.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^1.2",
+        "nesbot/carbon": "^2.44",
         "wildbit/swiftmailer-postmark": "^3.3"
     },
     "require-dev": {
@@ -37,6 +39,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files":[
+            "app/Helpers/Helpers.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
